# DBParity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.ru.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  oracle_mssql_field_report.yml
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: bench.py
dbparity/: __init__.py  cli.py  config.py
dbparity/adapters/: __init__.py  base.py  mssql_adapter.py  oracle_adapter.py  postgres_adapter.py  sqlite_adapter.py
dbparity/core/: checkpoint.py  compare.py  engine.py  incremental.py  models.py  normalize.py  schema_diff.py  segment.py
dbparity/demo/: seed.py
dbparity/report/: render.py
dbparity/report/templates/: report.html.j2  timeline.html.j2
dbparity/web/: __init__.py  __main__.py  server.py
docs/: config-reference.md  demo_report.html  index.html  report-format.md
scripts/: make_icon.py  pglite_server.mjs
tests/: test_bench_smoke.py  test_collation.py  test_compare.py  test_config_schema.py  test_end_to_end.py  test_hash_mode.py  test_history.py  test_incremental.py  test_mssql_integration.py  test_normalize.py  test_postgres_integration.py  test_report_schema.py  test_resume.py  test_schema_diff.py  test_validate.py  test_watch.py  test_web.py
