[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dbparity"
version = "0.3.0"
description = "Prove data equivalence after database migrations: streaming row-by-row comparison with migration-aware normalization and client-ready HTML reports"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nikita Fokin", email = "nikita.fokin0123@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
]
keywords = ["database", "migration", "data-diff", "verification",
            "postgresql", "oracle", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
oracle = ["oracledb>=2.0"]
mssql = ["pyodbc>=5.0"]
all = ["psycopg[binary]>=3.1", "oracledb>=2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
dbparity = "dbparity.cli:main"

[tool.setuptools.packages.find]
include = ["dbparity*"]

[tool.setuptools.package-data]
"dbparity.report" = ["templates/*.j2"]
